--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@angular/platform-browser": "21.1.0",
     "@angular/platform-browser-dynamic": "21.1.0",
     "@angular/router": "21.1.0",
+    "@aziham/chartjs-plugin-streaming": "^3.5.1",
     "@godind/ng-canvas-gauges": "^6.2.1",
     "@types/canvas-gauges": "^2.1.8",
     "@types/jasmine": "~3.6.0",
@@ -81,7 +82,6 @@
     "@zakj/no-sleep": "^0.13.5",
     "angular-eslint": "21.1.0",
     "chart.js": "^4.5.1",
-    "@aziham/chartjs-plugin-streaming": "^3.5.1",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-annotation": "^3.0.1",
     "clipboard": "^2.0.11",
@@ -117,6 +117,8 @@
     "zone.js": "^0.15.1"
   },
   "dependencies": {
-    "@signalk/server-api": "^2.7.2"
+    "@godind/canvas-gauges": "^2.2.1",
+    "@signalk/server-api": "^2.7.2",
+    "marked": "^17.0.1"
   }
 }
