--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,13 +3,14 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
-    "types": ["node"],
+    "types": ["node"]
   },
   "files": [
     "main.ts",
     "polyfills.ts"
   ],
-  "include": [
-    "src/**/*.d.ts"
-  ]
+"include": [
+  "**/*.d.ts"
+]
+
 }
