Fix Raspi build (skipLibCheck + baconjs)

--- a/kip-plugin/tsconfig.plugin.json
+++ b/kip-plugin/tsconfig.plugin.json
@@ -2,6 +2,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "skipLibCheck": true,
     "outDir": "../plugin",
     "types": [],
     "resolveJsonModule": true,
